Major User visible changes in Buildbot.             -*- outline -*-
   see the git log for a detailed list of changes:
   https://github.com/buildbot/buildbot/compare/buildbot-0.8.4...buildbot-0.8.5


* Next Version

** Buildbot can now take advantage of authentication done by a front-end web server:
   https://github.com/buildbot/buildbot/pull/266

* Buildbot 0.8.5

** Updated, sphinx-based documentation

The Buildbot documentation has been ported to Sphinx and significantly refactored and extended.

** Better support for users in Buildbot (GSoC project)

Buildbot now tracks user identity across version-control commits, IRC and web
interactions, and Try submissions.

** New and improved Source steps (GSoC project)

Source steps have been rewritten to have a simpler, more consistent
configuration, and to run on the master instead of the slave, allowing much
more control over their behavior.

** EC2 instances are now terminated instead of stopped.

This is really only relevant for EBS-backed instances, as Buildbot will now
free the instance and associated EBS storage when shutting down the slave.

** SQLite databases use write-ahead logging

WAL mode offers much greater concurrency (preventing the dreaded 'database is
locked' errors) and is also more efficient and durable.

** Deprecations, Removals, and Non-Compatible Changes

*** Any custom IStatusListener providers which do not inherit from
StatusListener should provide a checkConfig(all_statuses): method.
This is to verify at startup that there are no conflicting status configurations.

*** The db.buildrequests.claimBuildRequests method can no longer re-claim
already-claimed requests; use reclaimBuildRequests instead.  The database no
longer tracks master instances, so the unclaimOldIncarnationRequests method has
been removed.  Note that several of the methods in this module now perform
fewer consistency checks, for efficiency.

*** Upgrades directly from versions older than 0.6.5 will no longer