@@ -23,7 +23,7 @@ from buildbot.status.builder import Results
 from twisted.internet import reactor
 from twisted.internet.protocol import ProcessProtocol
 
-def defaultReviewCB(builderName, build, result, arg):
+def defaultReviewCB(builderName, build, result, status, arg):
     message =  "Buildbot finished compiling your patchset\n"
     message += "on configuration: %s\n" % builderName
     message += "The result is: %s\n" % Results[result].upper()
@@ -86,7 +86,9 @@ class GerritStatusPush(StatusReceiverMultiService):
         if downloads is not None and downloaded is not None: 
             downloaded = downloaded.split(" ")
             if downloads and 2 * len(downloads) == len(downloaded):
-                message, verified, reviewed = self.reviewCB(builderName, build, result, self.reviewArg)
+                message, verified, reviewed = self.reviewCB(builderName, build, result, self.status, self.reviewArg)
+                if message == None:
+                    return
                 for i in range(0, len(downloads)):
                     try:
                         project, change1 = downloads[i].split(" ")
@@ -105,7 +107,7 @@ class GerritStatusPush(StatusReceiverMultiService):
             project = build.getProperty("project")
             revision = build.getProperty("got_revision")
             if project is not None and revision is not None:
-                message, verified, reviewed = self.reviewCB(builderName, build, result, self.reviewArg)
+                message, verified, reviewed = self.reviewCB(builderName, build, result, self.status, self.reviewArg)
                 self.sendCodeReview(project, revision, message, verified, reviewed)
                 return
 
